# covid19-idm

./: .gitignore  Dockerfile  Makefile  README.md  __version__.py  dashboard.py  manage.py  pyproject.toml  requirements.txt
conf/: api.yml  config.yml
data/: src_confirmed.parquet
fabric/: api.py  cli.py  idm_factory.py  utility.py
fabric/idm/: utility.py
fabric/idm/models/: __init__.py  _forecast.py  _infer_rt.py  _seir.py
playbook/: create_supervisord_conf.yml  install_idm_module.yml
playbook/template/: supervisord.j2
tests/: conftest.py  test_api.py  test_idm_factory.py
tests/idm/: test_utility.py
tests/idm/models/: test_forecast.py  test_infer_rt.py  test_seir.py
tests/resources/: cases.parquet  confirmed_rt.parquet  cumulative_confirmed_forecast.parquet  prepare_data.parquet  prepare_data_two.parquet
